<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kryptkode.deviceid.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/img"
                android:layout_width="@dimen/device_id_error_img_size"
                android:layout_height="@dimen/device_id_error_img_size"
                android:contentDescription="@string/cd_device_recognition_device_image"
                app:layout_constraintBottom_toTopOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_device" />


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/device_id_default_margin"
                android:layout_marginTop="@dimen/device_id_default_margin"
                android:layout_marginEnd="@dimen/device_id_default_margin"
                android:gravity="center"
                android:text="@string/title_text"
                android:textAppearance="@style/TextAppearance.App.H1"
                app:layout_constraintBottom_toBottomOf="@id/tv_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/device_id_default_margin"
                android:layout_marginTop="@dimen/device_id_default_margin"
                android:layout_marginEnd="@dimen/device_id_default_margin"
                android:gravity="center"
                android:text="@string/message_text"
                android:textAppearance="@style/TextAppearance.App.Body"
                app:layout_constraintBottom_toTopOf="@id/device_id"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="@string/message_text" />

            <TextView
                android:id="@+id/device_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/device_id_default_margin"
                android:gravity="center"
                android:textIsSelectable="true"
                android:text="@{viewModel.deviceId}"
                android:textAppearance="@style/TextAppearance.App.H3"
                app:layout_constraintBottom_toTopOf="@id/btn_contact_admin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_message"
                tools:text="8343434394030949034B:4584:r4" />

            <Button
                android:id="@+id/btn_contact_admin"
                style="@style/Widget.App.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/device_id_default_margin"
                android:layout_marginTop="@dimen/device_id_default_margin"
                android:layout_marginEnd="@dimen/device_id_default_margin"
                android:onClick="@{()-> viewModel.handleContactAdmin()}"
                android:text="@string/contact_admin"
                app:layout_constraintBottom_toTopOf="@id/btn_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/device_id"
                app:layout_constraintWidth_max="@dimen/device_id_btn_width_max" />

            <Button
                android:id="@+id/btn_close"
                style="@style/Widget.App.Button.Outlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/device_id_default_margin"
                android:layout_marginTop="@dimen/device_id_default_margin"
                android:layout_marginEnd="@dimen/device_id_default_margin"
                android:onClick="@{()-> viewModel.handleClose()}"
                android:text="@string/close_btn_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_contact_admin"
                app:layout_constraintWidth_max="@dimen/device_id_btn_width_max" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>